syntax = "proto3";
package anndb_pb;

import "core.proto";

service DatasetManager {
	rpc List(EmptyMessage) returns (stream Dataset);
	rpc Get(UUIDRequest) returns (Dataset);
	rpc Create(Dataset) returns (Dataset);
	rpc Delete(UUIDRequest) returns (EmptyMessage);
}

service DataManager {
	rpc Insert(InsertRequest) returns (EmptyMessage);
	rpc Update(UpdateRequest) returns (EmptyMessage);
	rpc Remove(RemoveRequest) returns (EmptyMessage);
}

message InsertRequest {
	bytes dataset_id = 1;
	uint64 id = 2;
	repeated float value = 3;
}

message UpdateRequest {
	bytes dataset_id = 1;
	uint64 id = 2;
	repeated float value = 3;
}

message RemoveRequest {
	bytes dataset_id = 1;
	uint64 id = 2;
}

enum Space {
	Euclidean = 0;
	Manhattan = 1;
	Cosine = 2;
}

message Dataset {
	bytes id = 1;
	uint32 dimension = 2;
	Space space = 3;
	uint32 partition_count = 4;
	uint32 replication_factor = 5;
	repeated Partition partitions = 6;
}

message Partition {
	bytes id = 1;
	repeated uint64 node_ids = 2;
}

enum DatasetManagerChangeType {
	DatasetManagerCreateDataset = 0;
	DatasetManagerDeleteDataset = 1;
	DatasetManagerUpdatePartitionNodes = 2;
}

message DatasetManagerChange {
	DatasetManagerChangeType type = 1;
	bytes notification_id = 2;
	bytes data = 3;
}

enum DatasetPartitionNodesChangeType {
	DatasetPartitionNodesChangeAddNode = 0;
	DatasetPartitionNodesChangeRemoveNode = 1;
}

message DatasetPartitionNodesChange {
	DatasetPartitionNodesChangeType type = 1;
	bytes dataset_id = 2;
	bytes partition_id = 3;
	uint64 node_id = 4;
}

enum PartitionChangeType {
	PartitionChangeInsertValue = 0;
	PartitionChangeUpdateValue = 1;
	PartitionChangeDeleteValue = 2;
}

message PartitionChange {
	PartitionChangeType type = 1;
	bytes notification_id = 2;
	uint64 id = 3;
	repeated float value = 4;
	int32 level = 5;
}

message DatasetManagerSnapshot {
	repeated Dataset datasets = 1;
}